--- a/app/src/main/res/layout/content_video_viewholder.xml
+++ b/app/src/main/res/layout/content_video_viewholder.xml
@@ -25,12 +25,19 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
            />
-
-        <TextView
-            android:id="@+id/cvContentDate"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:id="@+id/llVideoBottom"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
+            android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/cvContentDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
+        </LinearLayout>
+
         </LinearLayout>
         </android.support.v7.widget.CardView>
 </FrameLayout>
