--- a/app/src/main/res/layout/content_video_youku_viewholder.xml
+++ b/app/src/main/res/layout/content_video_youku_viewholder.xml
@@ -42,22 +42,48 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     card_view:srcCompat="@drawable/ic_play_normal" />
+
                 <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    />
+                    android:layout_marginTop="10dp"
+                    android:textColor="@android:color/white" />
             </RelativeLayout>
 
 
-            <TextView
-                android:id="@+id/cvContentDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/llVideoBottom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/cvContentDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_comment_outline" />
+                <TextView
+                    android:id="@+id/tvCommentNum"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
