--- a/app/src/main/res/menu/options_menu_webview.xml
+++ b/app/src/main/res/menu/options_menu_webview.xml
@@ -4,6 +4,6 @@
 
     <item android:id="@+id/action_share"
         android:title="@string/action_share"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_share_variant"
         app:showAsAction="always"/>
 </menu>
