--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,11 +1,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <MultiSelectListPreference android:key="favorites"
+   <!-- <MultiSelectListPreference android:key="favorites"
         android:title="@string/favorites_title"
         android:summary="@string/favorites_summary"
         android:entries="@array/favorites"
         android:entryValues="@array/favorite_values"
-        android:dialogTitle="@string/favorites_dialog_title"  />
+        android:dialogTitle="@string/favorites_dialog_title"  />-->
+
 
    <!-- <SwitchPreference
         android:defaultValue="true"
@@ -36,6 +37,9 @@
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_add_friends_to_messages" />-->
+    <Preference
+        android:key="channels"
+        android:title="@string/favorites_title"/>
 
     <Preference
         android:key="checkVersion"
