--- a/app/src/main/res/layout/content_post_viewholder.xml
+++ b/app/src/main/res/layout/content_post_viewholder.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin = "1dp">
+    >
 
         <android.support.v7.widget.CardView
             android:id="@+id/cvContent"
@@ -19,10 +19,11 @@
             android:layout_height="wrap_content"
             android:padding="10dp">
 
-        <TextView
-            android:id="@+id/cvContentTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/cvContentTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?attr/actionMenuTextColor" />
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/cvContentImage"
@@ -30,6 +31,7 @@
             android:layout_height="200dp"            />
 
         <TextView
+            android:layout_marginTop="10dp"
             android:id="@+id/cvContentDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
