--- a/app/src/main/res/layout/content_video_youku_viewholder.xml
+++ b/app/src/main/res/layout/content_video_youku_viewholder.xml
@@ -3,26 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_margin = "1dp">
+   >
 
     <android.support.v7.widget.CardView
         android:id="@+id/cvContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="2dp"
+        android:padding="0dp"
         card_view:cardCornerRadius="0dp"
         >
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="0dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <com.youku.cloud.player.YoukuPlayerView
                     android:id="@+id/videoplayer"
@@ -34,7 +34,8 @@
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/cvContentImage"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="203dp"
+
                    />
                 <ImageView
                     android:id="@+id/imagePlay"
@@ -55,7 +56,8 @@
 
 
             <LinearLayout
-                android:layout_marginTop="10dp"
+                android:layout_margin="0dp"
+                android:padding="10dp"
                 android:id="@+id/llVideoBottom"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
