--- a/app/src/main/res/layout/content_image_viewholder.xml
+++ b/app/src/main/res/layout/content_image_viewholder.xml
@@ -22,20 +22,14 @@
 
         <TextView
             android:id="@+id/cvContentTitle"
+            android:textColor="@color/black"
+            android:textSize="@dimen/title_font"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"-->
-            <!--android:id="@+id/gridview"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="100dp"-->
 
-            <!--android:numColumns="3"-->
-            <!--android:verticalSpacing="10dp"-->
-            <!--android:horizontalSpacing="10dp"-->
-
-            <!--android:gravity="center"-->
-            <!--/>-->
                 <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -69,7 +63,8 @@
             android:id="@+id/cvContentDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
+            android:textSize="@dimen/date_font"
+            android:textColor="@color/tip"/>
         </LinearLayout>
         </android.support.v7.widget.CardView>
 </FrameLayout>
