--- a/app/src/main/res/layout/content_video_viewholder.xml
+++ b/app/src/main/res/layout/content_video_viewholder.xml
@@ -35,7 +35,8 @@
                     android:id="@+id/cvContentDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
+                    android:textSize="@dimen/date_font"
+                    android:textColor="@color/tip"/>
         </LinearLayout>
 
         </LinearLayout>
