--- a/app/src/main/res/layout/content_video_youku_viewholder.xml
+++ b/app/src/main/res/layout/content_video_youku_viewholder.xml
@@ -69,7 +69,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="3"
-                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+                    android:textSize="@dimen/date_font"
+                    android:textColor="@color/tip" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -83,7 +84,8 @@
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+                    android:textSize="@dimen/date_font"
+                    android:textColor="@color/tip"/>
             </LinearLayout>
 
         </LinearLayout>
