--- a/app/src/main/res/layout/viewholder_gwcontent_goods_image_on_left.xml
+++ b/app/src/main/res/layout/viewholder_gwcontent_goods_image_on_left.xml
@@ -35,7 +35,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:layout_marginLeft="10dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -43,7 +43,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_weight="0"/>
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/title_font"
+                        android:layout_weight="1"/>
 
                     <TextView
                         android:id="@+id/cvContentDate"
