--- a/app/src/main/res/layout/viewholder_post_image_left.xml
+++ b/app/src/main/res/layout/viewholder_post_image_left.xml
@@ -4,13 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin = "1dp">
+   >
 
     <android.support.v7.widget.CardView
         android:id="@+id/cvContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="2dp"
+        android:padding="0dp"
         card_view:cardCornerRadius="0dp"
         >
 
@@ -29,12 +29,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="10dp">
+               android:layout_marginLeft="10dp">
 
                 <TextView
                     android:id="@+id/cvContentTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/title_font"
                     android:layout_weight="1"/>
 
                 <TextView
@@ -43,7 +45,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="bottom"
                     android:layout_weight="1"
-                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+                    android:textSize="@dimen/date_font"
+                    android:textColor="@color/tip"  />
             </LinearLayout>
         </LinearLayout>
 
