--- a/app/src/main/res/layout/viewholder_post_image_middle.xml
+++ b/app/src/main/res/layout/viewholder_post_image_middle.xml
@@ -23,19 +23,22 @@
                     android:id="@+id/cvContentTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/actionMenuTextColor" />
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/title_font" />
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/cvContentImage"
             android:layout_width="match_parent"
-            android:layout_height="200dp"            />
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp"/>
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/cvContentDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
+                <TextView
+                    android:id="@+id/cvContentDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textSize="@dimen/date_font"
+                    android:textColor="@color/tip" />
         </LinearLayout>
         </android.support.v7.widget.CardView>
 </FrameLayout>
