--- a/app/src/main/res/layout/viewholder_post_image_right.xml
+++ b/app/src/main/res/layout/viewholder_post_image_right.xml
@@ -34,9 +34,10 @@
 
                 <TextView
                     android:id="@+id/cvContentTitle"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/title_font"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:layout_weight="1"/>
 
                 <TextView
@@ -45,7 +46,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="bottom"
                     android:layout_weight="1"
-                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+                    android:textSize="@dimen/date_font"
+                    android:textColor="@color/tip" />
             </LinearLayout>
 
             <com.facebook.drawee.view.SimpleDraweeView
