--- a/app/src/main/res/layout/viewholder_video.xml
+++ b/app/src/main/res/layout/viewholder_video.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin = "1dp">
+   >
 
         <android.support.v7.widget.CardView
             android:id="@+id/cvContent"
@@ -44,25 +44,28 @@
 
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:padding="10dp"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="10dp"
                             android:orientation="vertical">
 
                                 <TextView
                                     android:id="@+id/cvContentTitle"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/title_font"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
                                     android:layout_weight="1"/>
 
                                 <TextView
                                     android:id="@+id/cvContentDate"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom"
+                                    android:gravity="bottom"
                                     android:layout_weight="1"
-                                    android:textColor="@color/common_google_signin_btn_text_dark_disabled" />
+                                    android:textSize="@dimen/date_font"
+                                    android:textColor="@color/tip"  />
                         </LinearLayout>
 
                 </LinearLayout>
