--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -10,17 +10,13 @@
     tools:context="com.mmdkid.mmdkid.LoginActivity"
     tools:showIn="@layout/activity_login">
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="543dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:padding="10dp"
         tools:context="com.mmdkid.mmdkid.LoginActivity"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        >
 
         <!-- Login progress -->
         <ScrollView
@@ -98,7 +94,7 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="30dp"
                     android:gravity="center_horizontal"
                     android:text="@string/action_forgot"
                     android:textStyle="bold" />
@@ -108,7 +104,7 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="20dp"
                     android:gravity="center_horizontal"
                     android:text="@string/action_sign_up"
                     android:textStyle="bold" />
@@ -124,6 +120,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:textStyle="bold"
                         android:text="@string/oauth_login" />
 
                     <LinearLayout
@@ -134,8 +131,8 @@
 
                         <com.facebook.drawee.view.SimpleDraweeView
                             android:id="@+id/wxLogin"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="42dp"
+                            android:layout_height="42dp"
                             fresco:placeholderImage ="@drawable/umeng_socialize_wechat"
                             fresco:roundAsCircle="true"
                             fresco:roundingBorderWidth = "1dp"
@@ -144,8 +141,8 @@
 
                         <com.facebook.drawee.view.SimpleDraweeView
                             android:id="@+id/qqLogin"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="42dp"
+                            android:layout_height="42dp"
                             fresco:placeholderImage ="@drawable/umeng_socialize_qq"
                             fresco:roundAsCircle="true"
                             fresco:roundingBorderWidth = "1dp"
@@ -154,8 +151,8 @@
 
                         <com.facebook.drawee.view.SimpleDraweeView
                             android:id="@+id/sinaLogin"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="42dp"
+                            android:layout_height="42dp"
                             fresco:placeholderImage ="@drawable/umeng_socialize_sina"
                             fresco:roundAsCircle="true"
                             fresco:roundingBorderWidth = "1dp"
