整理代码，登录过程全部采用login类实现

--- a/app/src/main/res/values/favorites.xml
+++ b/app/src/main/res/values/favorites.xml
@@ -39,6 +39,9 @@
         <item>	国画	</item>
         <item>	水彩画	</item>
         <item>	油画	</item>
+        <item>	托福	</item>
+        <item>	雅思	</item>
+        <item>	留学</item>
 
     </string-array>
 
