--- a/app/src/main/res/layout/viewholder_post_image_left.xml
+++ b/app/src/main/res/layout/viewholder_post_image_left.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco = "http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,7 +24,9 @@
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/cvContentImage"
                 android:layout_width="100dp"
-                android:layout_height="80dp"                />
+                android:layout_height="80dp"
+                fresco:placeholderImageScaleType="fitCenter"
+                fresco:placeholderImage="@color/gray_cc"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
