--- a/app/src/main/res/layout/viewholder_post_image_middle.xml
+++ b/app/src/main/res/layout/viewholder_post_image_middle.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco = "http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -30,7 +31,9 @@
             android:id="@+id/cvContentImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            fresco:placeholderImage="@color/gray_cc"
+            fresco:placeholderImageScaleType="fitCenter"/>
 
                 <TextView
                     android:id="@+id/cvContentDate"
