--- a/app/src/main/res/layout/view_image_overlay.xml
+++ b/app/src/main/res/layout/view_image_overlay.xml
@@ -30,6 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:scrollbars="vertical"
+        android:singleLine="false"
         android:padding="16dp"/>
 
 </merge>
