--- a/app/src/main/res/layout/viewholder_image_three.xml
+++ b/app/src/main/res/layout/viewholder_image_three.xml
@@ -27,38 +27,56 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                        <com.facebook.drawee.view.SimpleDraweeView
-                            android:id="@+id/sdvImage1"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
+                    android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                                <com.facebook.drawee.view.SimpleDraweeView
+                                    android:id="@+id/sdvImage1"
+                                    android:layout_width="100dp"
+                                    android:layout_height="80dp"
 
-                            android:layout_weight="1"
-                            fresco:placeholderImageScaleType="fitCenter"
-                            fresco:placeholderImage="@color/gray_cc" />
-                        <com.facebook.drawee.view.SimpleDraweeView
-                            android:id="@+id/sdvImage2"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
-                            android:paddingLeft="2dp"
-                            android:layout_weight="1"
-                            fresco:placeholderImageScaleType="fitCenter"
-                            fresco:placeholderImage="@color/gray_cc" />
-                        <com.facebook.drawee.view.SimpleDraweeView
-                            android:id="@+id/sdvImage3"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
-                            android:paddingLeft="2dp"
-                            android:layout_weight="1"
-                            fresco:placeholderImageScaleType="fitCenter"
-                            fresco:placeholderImage="@color/gray_cc" />
+                                    android:layout_weight="1"
+                                    fresco:placeholderImageScaleType="fitCenter"
+                                    fresco:placeholderImage="@color/gray_cc" />
+                                <com.facebook.drawee.view.SimpleDraweeView
+                                    android:id="@+id/sdvImage2"
+                                    android:layout_width="100dp"
+                                    android:layout_height="80dp"
+                                    android:paddingLeft="2dp"
+                                    android:layout_weight="1"
+                                    fresco:placeholderImageScaleType="fitCenter"
+                                    fresco:placeholderImage="@color/gray_cc" />
+                                <com.facebook.drawee.view.SimpleDraweeView
+                                    android:id="@+id/sdvImage3"
+                                    android:layout_width="100dp"
+                                    android:layout_height="80dp"
+                                    android:paddingLeft="2dp"
+                                    android:layout_weight="1"
+                                    fresco:placeholderImageScaleType="fitCenter"
+                                    fresco:placeholderImage="@color/gray_cc" />
 
-                </LinearLayout>
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/tvImageCount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/shape_radius"
+                            android:textSize="10sp"
+                            android:padding="3dp"
+                            android:textColor="@android:color/white"
+                            />
+
+                </RelativeLayout>
+
         <TextView
             android:id="@+id/cvContentDate"
             android:layout_width="wrap_content"
