--- a/app/src/main/res/layout/content_recycler_view.xml
+++ b/app/src/main/res/layout/content_recycler_view.xml
@@ -5,8 +5,8 @@
     android:id="@+id/content_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
+    >
+    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/layout_swipe_refresh"
         android:layout_width="match_parent"
