--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,11 @@
             app:tabIndicatorColor="@android:color/holo_red_light"
             app:tabSelectedTextColor="@android:color/holo_red_light"
             app:tabTextColor="@android:color/black" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#DADADA"
+            />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
