--- a/app/src/main/res/layout/content_video_youku_viewholder.xml
+++ b/app/src/main/res/layout/content_video_youku_viewholder.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
@@ -55,13 +56,47 @@
             </RelativeLayout>
 
 
+
+
             <LinearLayout
                 android:layout_margin="0dp"
                 android:padding="10dp"
-                android:id="@+id/llVideoBottom"
+
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llShareTo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="3"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tvShareTo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/action_share_to"
+                        android:textSize="@dimen/date_font"
+                        android:textColor="@color/tip"/>
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/sdvWeChat"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginLeft="10dp"
+                        fresco:placeholderImage ="@drawable/umeng_socialize_wechat"
+                        fresco:roundAsCircle="true"/>
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/sdvWxCircle"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginLeft="10dp"
+                        fresco:placeholderImage ="@drawable/umeng_socialize_wxcircle"
+                        fresco:roundAsCircle="true"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/cvContentDate"
@@ -72,16 +107,26 @@
                     android:textSize="@dimen/date_font"
                     android:textColor="@color/tip" />
 
-
-                <TextView
-                    android:id="@+id/tvCommentNum"
-                    android:layout_weight="1"
-                    android:gravity="right"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
-                    android:textSize="@dimen/date_font"
-                    android:textColor="@color/tip"/>
+                    android:gravity="right"
+                    android:layout_gravity="center"
+                    android:id="@+id/llVideoBottom"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tvCommentNum"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:textSize="@dimen/date_font"
+                        android:textColor="@color/tip"
+                        android:text="llllll"/>
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
