--- a/app/src/main/res/layout/view_image_overlay.xml
+++ b/app/src/main/res/layout/view_image_overlay.xml
@@ -66,16 +66,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:padding="16dp"
+        android:paddingTop="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="10dp"
         android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:background="@color/translucent_black_50">
         <TextView
             android:id="@+id/tvDescription"
             style="@style/DescriptionText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
-            android:singleLine="false"/>
+            android:singleLine="false"
+            android:maxLines="10"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
