--- a/app/src/main/res/layout/fragment_register_email.xml
+++ b/app/src/main/res/layout/fragment_register_email.xml
@@ -71,7 +71,7 @@
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/prompt_password"
+                        android:hint="@string/register_password"
 
                         android:inputType="textPassword"
                         android:maxLines="1"
