--- a/app/src/main/res/layout/fragment_register_phone.xml
+++ b/app/src/main/res/layout/fragment_register_phone.xml
@@ -81,7 +81,7 @@
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
+                android:hint="@string/register_password"
                 android:inputType="textPassword">
 
             </EditText>
